--- a/folderOne/fileOne.html
+++ b/folderOne/fileOne.html
@@ -13,6 +13,28 @@
     <table border="1" cellspacing="0" cellpadding="10">
         <tr>
             <th>Name</th>
+            <th>Age</th>
+            <th>City</th>
+        </tr>
+        <tr>
+            <td>Peter</td>
+            <td>25</td>
+            <td>WashingTon</td>
+        </tr>
+        <tr>
+            <td>Jhon</td>
+            <td>27</td>
+            <td>New york</td>
+        </tr>
+        <tr>
+            <td>Sherry</td>
+            <td>23</td>
+            <td>Texas</td>
+        </tr>
+        <tr>
+            <td>Donald</td>
+            <td>24</td>
+            <td>Florida</td>
         </tr>
     </table>
 </body>
